deployOTS/ots-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ots-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: otsdashboard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: dashboard-service
                  port: 
                    number: 80
